Added Admin Middleware in the Backend

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 port=4500
 mongoDB="mongodb+srv://iclimbsofficial:BCyPPFNSpJjimuOr@iclimbs.m1nlcjl.mongodb.net/testing?retryWrites=true&w=majority&appName=Iclimbs"
+salt=10
