made Changes in Transporter & Added Eail Temaplate

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 port=4500
-mongoDB="mongodb+srv://iclimbsofficial:BCyPPFNSpJjimuOr@iclimbs.m1nlcjl.mongodb.net/testing?retryWrites=true&w=majority&appName=Iclimbs"
+mongoDB="mongodb+srv://iclimbsofficial:BCyPPFNSpJjimuOr@iclimbs.m1nlcjl.mongodb.net/localtesting?retryWrites=true&w=majority&appName=Iclimbs"
 salt=10
+senderemail="uttamkr5599@gmail.com"
+user="uttamkr5599@gmail.com"
+pass="xgrgrggyujlyxtwe"
